--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "li xu cheng",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
+    "mongoose": "^4.10.5",
     "ol": "^4.1.1",
     "pug": "^2.0.0-rc.1",
     "pug-loader": "^2.3.0",
