--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "build": "webpack --config webpack.prod.js --progress",
+    "start": "NODE_ENV=production node app",
     "dev": "NODE_ENV=development supervisor -w modules,routes,views,app.js -e js,pug app"
   },
   "repository": {
@@ -27,15 +28,23 @@
     "uikit": "^3.0.0-beta.24"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
+    "inline-chunk-manifest-html-webpack-plugin": "^1.1.1",
+    "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.3.0",
     "reload": "^1.1.5",
     "style-loader": "^0.18.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
+    "webpack-chunk-hash": "^0.4.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   }
