--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     image: parking-lot-identification
     container_name: parking-dashboard
     environment:
-      - EMap_API=http://emap.crl.ibm.com/imd/api/
-      - Street_View_APIKEY=car
-      - MongoDB_URI=mongodb://dashboard_mongo:27017/parking_lots_identification
+      - EMap_API=${EMap_API:-http://emap.crl.ibm.com/imd/api/}
+      - Street_View_APIKEY=${Street_View_APIKEY:-car}
+      - MongoDB_URI=${MongoDB_URI:-mongodb://dashboard_mongo:27017/parking_lots_identification}
     links:
       - mongodb:dashboard_mongo
     ports:
