--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js --progress",
     "start": "NODE_ENV=production node app",
-    "dev": "NODE_ENV=development supervisor -w modules,routes,views,app.js -e js,pug app"
+    "dev": "NODE_ENV=development supervisor -w locales,modules,routes,views,app.js -e js,pug,json app"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "co": "^4.6.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "i18n": "^0.8.3",
     "jquery": "^3.2.1",
