--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js --progress",
     "start": "NODE_ENV=production node app",
-    "dev": "NODE_ENV=development supervisor -w locales,modules,routes,views,app.js -e js,pug,json app"
+    "dev": "NODE_ENV=development supervisor -w modules,routes,views,app.js -e js,pug app"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,11 @@
     "co": "^4.6.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
-    "i18n": "^0.8.3",
+    "i18next": "^8.4.3",
+    "i18next-browser-languagedetector": "^2.0.0",
+    "i18next-xhr-backend": "^1.4.2",
     "jquery": "^3.2.1",
+    "jquery-i18next": "^1.2.0",
     "mongoose": "^4.10.5",
     "ol": "^4.1.1",
     "pug": "^2.0.0-rc.1",
@@ -33,13 +36,14 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "inline-chunk-manifest-html-webpack-plugin": "^1.1.1",
+    "json-loader": "^0.5.4",
     "pug-html-loader": "^1.1.5",
     "pug-loader": "^2.3.0",
     "reload": "^1.1.5",
