--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next-browser-languagedetector": "^2.0.0",
     "i18next-xhr-backend": "^1.4.2",
     "jquery": "^3.2.1",
+    "jquery-address": "^1.6.0",
     "jquery-i18next": "^1.2.0",
     "mongoose": "^4.10.5",
     "ol": "^4.1.1",
@@ -40,6 +41,7 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "inline-chunk-manifest-html-webpack-plugin": "^1.1.1",
